fix: adjust image position, enlarge survey icon, fix dropdown icon alignment

--- a/customize.css
+++ b/customize.css
@@ -270,7 +270,7 @@
     height: 250px;
     background-image: url('images/surveycon.png');
     background-size: contain;
-    background-position: center;
+    background-position: center bottom;
     background-repeat: no-repeat;
     position: relative;
     align-self: center;
